# work-notes

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  RELEASING.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: architecture.md  development.md  parser-contract.md  testing.md
docs/design/: README.md
docs/releases/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
docs/verification/: 2026-05-20-v1-verification.md
schemas/: parse-note.schema.json
scripts/: bump-version.mjs  cargo-test.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  domain.rs  lib.rs  main.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/parser/: codex_provider.rs  directives.rs  fake_provider.rs  mod.rs  prompt.rs  result_applier.rs  types.rs  validate.rs
src-tauri/src/repositories/: actions.rs  card_notes.rs  mod.rs  notes.rs  parse_jobs.rs  tags.rs
src-tauri/src/services/: actions.rs  archive.rs  capture.rs  draft.rs  mod.rs  note_edits.rs  parse_queue.rs  search.rs  settings.rs
src-tauri/src/windowing/: hotkey.rs  mod.rs  quick_capture.rs  startup.rs  tray.rs
src/lib/: action-groups.test.ts  action-groups.ts  api.test.ts  api.ts  events.ts  followups.test.ts  followups.ts  markdown.test.ts  markdown.ts  nav-summary.test.ts  nav-summary.ts  note-presentation.test.ts  note-presentation.ts  people.test.ts  people.ts  retry.test.ts  retry.ts  scaffold.test.ts  (+7 more)
(+84 files in other folders)
